--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <link rel="stylesheet" href="./global.css" />
+    <link rel="stylesheet" href="./index.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Yoon Meolijeongche2S:wght@400&display=swap"
@@ -14,323 +15,160 @@
     />
   </head>
   <body>
-    <div
-      class="relative bg-whitesmoke w-full h-[810px] overflow-hidden text-left text-sm text-darkslategray font-pretendard"
-    >
-      <div
-        class="absolute top-[112px] left-[0px] bg-white w-[1440px] h-[464px]"
-      ></div>
-      <div
-        class="absolute top-[38px] left-[180px] text-[32px] font-yoon-meolijeongche2s text-dodgerblue"
-      >
+    <div class="main">
+      <div class="main-child"></div>
+      <div class="div">
         <span>생생</span>
-        <span class="text-slateblue">진로통</span>
+        <span class="span">진로통</span>
       </div>
-      <div
-        class="absolute top-[42px] left-[139px] rounded [background:linear-gradient(137.64deg,_#1f7edc,_#7e4daa)] w-[34px] h-[34px]"
-      ></div>
-      <div
-        class="absolute top-[137px] left-[139px] text-3xl font-yoon-meolijeongche2s"
-      >
-        이색직업관
-      </div>
-      <div
-        class="absolute top-[598px] left-[139px] text-3xl font-yoon-meolijeongche2s"
-      >
-        찾아보기
-      </div>
-      <div
-        class="absolute top-[147px] left-[249px] text-[14.02px] tracking-[-0.04em]"
-      >
-        21세기에 주목받는 색다른 직업들을 만나보세요!
-      </div>
-      <div class="absolute top-[609px] left-[230px] tracking-[-0.04em]">
-        여러 직업들을 만나보세요!
-      </div>
-      <b class="absolute top-[50px] left-[1023px] text-lgi tracking-[-0.04em]"
-        >탐색하기</b
-      >
-      <b class="absolute top-[50px] left-[1134px] text-lgi tracking-[-0.04em]"
-        >공부하기</b
-      >
-      <div
-        class="absolute top-[186px] left-[139px] shadow-[0px_0px_12px_#5164c1] w-[236px] h-[356px] text-[20.36px] text-white font-yoon-meolijeongche2s"
-      >
-        <div
-          class="absolute top-[0px] left-[0px] rounded-3xl [background:linear-gradient(156.36deg,_#1f7edc,_#7c4fac)] w-[236px] h-[356px]"
-        ></div>
-        <img
-          class="absolute top-[22px] left-[25px] rounded-9xl w-[186px] h-[186px] object-cover"
-          alt=""
-          src="/public/rectangle-8@2x.png"
-        />
+      <div class="main-item"></div>
+      <div class="div1">이색직업관</div>
+      <div class="div2">찾아보기</div>
+      <div class="div3">21세기에 주목받는 색다른 직업들을 만나보세요!</div>
+      <div class="div4">여러 직업들을 만나보세요!</div>
+      <b class="b">탐색하기</b>
+      <b class="b1">공부하기</b>
+      <div class="rectangle-parent">
+        <div class="group-child"></div>
+        <img class="group-item" alt="" src="./public/rectangle-8@2x.png" />
 
-        <div class="absolute top-[226px] left-[37px]">프롬프트 엔지니어</div>
+        <div class="div5">프롬프트 엔지니어</div>
       </div>
-      <div
-        class="absolute top-[186px] left-[410px] shadow-[0px_0px_12px_#a83a96] w-[236px] h-[356px] text-gray"
-      >
-        <div
-          class="absolute top-[0px] left-[0px] rounded-3xl [background:linear-gradient(156.36deg,_#7c4fac,_#c82c88)] w-[236px] h-[356px]"
-        ></div>
-        <div
-          class="absolute top-[264px] left-[25px] tracking-[-0.04em] inline-block w-[187px]"
-        >
+      <div class="rectangle-group">
+        <div class="group-inner"></div>
+        <div class="div6">
           기업이나 제품의 브랜드 가치를 향상시키기 위해 마케팅 전략을 기획하고
           실행하는 전문가입니다.
         </div>
-        <div
-          class="absolute top-[226px] left-[56px] text-[20.36px] font-yoon-meolijeongche2s text-white"
-        >
-          브랜드 마케터
-        </div>
-        <img
-          class="absolute top-[22px] left-[25px] rounded-9xl w-[186px] h-[186px] object-cover"
-          alt=""
-          src="/public/rectangle-81@2x.png"
-        />
+        <div class="div7">브랜드 마케터</div>
+        <img class="group-item" alt="" src="./public/rectangle-81@2x.png" />
       </div>
-      <div
-        class="absolute top-[186px] left-[681px] shadow-[0px_0px_12px_#b75c65] w-[236px] h-[356px] text-gray"
-      >
-        <div
-          class="absolute top-[0px] left-[0px] rounded-3xl [background:linear-gradient(156.36deg,_#c82c88,_#ac7d4f)] w-[236px] h-[356px]"
-        ></div>
-        <div
-          class="absolute top-[264px] left-[25px] tracking-[-0.04em] inline-block w-[187px]"
-        >
+      <div class="rectangle-container">
+        <div class="rectangle-div"></div>
+        <div class="div6">
           실내 공간의 디자인 요소인 가구, 목재 패널 등을 제작, 조립하고 설치하는
           목수로, 고객의 요구와 디자인 컨셉에 맞는 인테리어를 제공합니다.
         </div>
-        <div
-          class="absolute top-[226px] left-[56px] text-[20.36px] font-yoon-meolijeongche2s text-white"
-        >
-          인테리어 목수
-        </div>
-        <img
-          class="absolute top-[22px] left-[25px] rounded-9xl w-[186px] h-[186px] object-cover"
-          alt=""
-          src="/public/rectangle-82@2x.png"
-        />
+        <div class="div7">인테리어 목수</div>
+        <img class="group-item" alt="" src="./public/rectangle-82@2x.png" />
       </div>
-      <div
-        class="absolute top-[186px] left-[952px] shadow-[0px_0px_12px_#96a939] w-[236px] h-[356px] text-gray"
-      >
-        <div
-          class="absolute top-[0px] left-[0px] rounded-3xl [background:linear-gradient(156.36deg,_#ac7d4f,_#89c62c)] w-[236px] h-[356px]"
-        ></div>
-        <div
-          class="absolute top-[264px] left-[25px] tracking-[-0.04em] inline-block w-[187px]"
-        >
+      <div class="group-div">
+        <div class="group-child2"></div>
+        <div class="div6">
           재미와 전략을 결합시켜 새로운 보드게임을 개발하는 역할로, 게임의 규칙,
           컴포넌트, 아트워크 등을 설계하여 즐거움과 상호작용을 제공합니다.
         </div>
-        <div
-          class="absolute top-[226px] left-[37px] text-[20.36px] font-yoon-meolijeongche2s text-white"
-        >
-          보드게임 디자이너
-        </div>
-        <img
-          class="absolute top-[22px] left-[25px] rounded-9xl w-[186px] h-[186px] object-cover"
-          alt=""
-          src="/public/rectangle-83@2x.png"
-        />
+        <div class="div11">보드게임 디자이너</div>
+        <img class="group-item" alt="" src="./public/rectangle-83@2x.png" />
       </div>
-      <div
-        class="absolute top-[186px] left-[1223px] shadow-[0px_0px_12px_#59aa75] w-[236px] h-[356px] text-gray"
-      >
-        <div
-          class="absolute top-[0px] left-[0px] rounded-3xl [background:linear-gradient(156.36deg,_#89c62c,_#3c99a2)] w-[236px] h-[356px]"
-        ></div>
-        <div
-          class="absolute top-[264px] left-[25px] tracking-[-0.06em] inline-block w-[187px]"
-        >
+      <div class="rectangle-parent1">
+        <div class="group-child4"></div>
+        <div class="div12">
           환경 보전과 지속가능한 삶에 대한 전문가로, 다양한 교육 자료와 활동을
           개발하여 환경 문제의 중요성과 해결 방법을 알리고 인식을 개선합니다.
         </div>
-        <div
-          class="absolute top-[226px] left-[47px] text-[20.36px] font-yoon-meolijeongche2s text-white"
-        >
-          환경교육 전문가
-        </div>
-        <img
-          class="absolute top-[22px] left-[25px] rounded-9xl w-[186px] h-[186px] object-cover"
-          alt=""
-          src="/public/rectangle-84@2x.png"
-        />
+        <div class="div13">환경교육 전문가</div>
+        <img class="group-item" alt="" src="./public/rectangle-84@2x.png" />
       </div>
-      <div
-        class="absolute top-[646px] left-[141px] rounded-2xs bg-white shadow-[0px_0px_8px_#b3c6d9] box-border w-[377px] flex flex-row py-3 px-4 items-center justify-start gap-[10px] text-lg text-black border-[1px] border-solid border-lightgray"
-      >
-        <img
-          class="relative rounded-4xs w-[58px] h-[58px] object-cover"
-          alt=""
-          src="/public/rectangle-11@2x.png"
-        />
+      <div class="frame-div">
+        <img class="frame-child" alt="" src="./public/rectangle-11@2x.png" />
 
-        <div class="relative w-[184px] h-[53px]">
-          <b class="absolute top-[0px] left-[0px] tracking-[-0.04em]">소방관</b>
-          <div
-            class="absolute top-[25px] left-[0px] text-xs tracking-[-0.04em] font-medium text-darkgray"
-          >
-            <p class="m-0">국민의 생명과 재산을 지키는 멋진 사람들!</p>
-            <p class="m-0">화재를 진압하고, 사람들을 구조해요!</p>
+        <div class="parent">
+          <b class="ai">소방관</b>
+          <div class="div14">
+            <p class="p">국민의 생명과 재산을 지키는 멋진 사람들!</p>
+            <p class="p">화재를 진압하고, 사람들을 구조해요!</p>
           </div>
         </div>
       </div>
-      <div
-        class="absolute top-[749px] left-[141px] rounded-2xs bg-white shadow-[0px_0px_8px_#b3c6d9] box-border w-[377px] flex flex-row py-3 px-4 items-center justify-start gap-[10px] text-lg text-black border-[1px] border-solid border-lightgray"
-      >
-        <img
-          class="relative rounded-4xs w-[58px] h-[58px] object-cover"
-          alt=""
-          src="/public/rectangle-111@2x.png"
-        />
+      <div class="rectangle-parent2">
+        <img class="frame-child" alt="" src="./public/rectangle-111@2x.png" />
 
-        <div class="relative w-[268px] h-[53px]">
-          <b class="absolute top-[0px] left-[0px] tracking-[-0.04em]">회계사</b>
-          <div
-            class="absolute top-[25px] left-[0px] text-xs tracking-[-0.04em] font-medium text-darkgray"
-          >
-            <p class="m-0">
+        <div class="group">
+          <b class="ai">회계사</b>
+          <div class="div14">
+            <p class="p">
               기업이나 개인의 재무 상태를 분석하고, 회계 기록을 관리하는
             </p>
-            <p class="m-0">
+            <p class="p">
               전문가입니다. 재무 건전성과 성과 평가에 큰 역할을 합니다.
             </p>
           </div>
         </div>
       </div>
-      <div
-        class="absolute top-[646px] left-[532px] rounded-2xs bg-white shadow-[0px_0px_8px_#b3c6d9] box-border w-[376px] flex flex-row py-3 px-4 items-center justify-start gap-[10px] text-lg text-black border-[1px] border-solid border-lightgray"
-      >
-        <img
-          class="relative rounded-4xs w-[58px] h-[58px] object-cover"
-          alt=""
-          src="/public/rectangle-112@2x.png"
-        />
+      <div class="rectangle-parent3">
+        <img class="frame-child" alt="" src="./public/rectangle-112@2x.png" />
 
-        <div class="relative w-[243px] h-[53px]">
-          <b class="absolute top-[0px] left-[0px] tracking-[-0.04em]">교사</b>
-          <div
-            class="absolute top-[25px] left-[0px] text-xs tracking-[-0.04em] font-medium text-darkgray"
-          >
-            <p class="m-0">학생들의 교육과 성장을 이끄는 전문가로,</p>
-            <p class="m-0">
+        <div class="container">
+          <b class="ai">교사</b>
+          <div class="div14">
+            <p class="p">학생들의 교육과 성장을 이끄는 전문가로,</p>
+            <p class="p">
               지식과 가치를 전달하며 학생들을 가르치고 지도합니다.
             </p>
           </div>
         </div>
       </div>
-      <div
-        class="absolute top-[749px] left-[532px] rounded-2xs bg-white shadow-[0px_0px_8px_#b3c6d9] box-border w-[376px] flex flex-row py-3 px-4 items-center justify-start gap-[10px] text-lg text-black border-[1px] border-solid border-lightgray"
-      >
-        <img
-          class="relative rounded-4xs w-[58px] h-[58px] object-cover"
-          alt=""
-          src="/public/rectangle-113@2x.png"
-        />
+      <div class="rectangle-parent4">
+        <img class="frame-child" alt="" src="./public/rectangle-113@2x.png" />
 
-        <div class="relative w-[284px] h-[53px]">
-          <b class="absolute top-[0px] left-[0px] tracking-[-0.04em]"
-            >특허 변리사</b
-          >
-          <div
-            class="absolute top-[25px] left-[0px] text-xs tracking-[-0.05em] font-medium text-darkgray"
-          >
-            <p class="m-0">
+        <div class="ai-parent">
+          <b class="ai">특허 변리사</b>
+          <div class="div17">
+            <p class="p">
               발명품 및 기술에 대한 특허 등록과 관련된 법률적인 문제를 다루는
             </p>
-            <p class="m-0">
+            <p class="p">
               전문가입니다..특허권 보호를 위한 전략을 수립하고, 특허 신청 및
             </p>
           </div>
         </div>
       </div>
-      <div
-        class="absolute top-[646px] left-[922px] rounded-2xs bg-white shadow-[0px_0px_8px_#b3c6d9] box-border w-[377px] flex flex-row py-3 px-4 items-center justify-start gap-[10px] text-xs text-darkgray border-[1px] border-solid border-lightgray"
-      >
-        <img
-          class="relative rounded-4xs w-[58px] h-[58px] object-cover"
-          alt=""
-          src="/public/rectangle-114@2x.png"
-        />
+      <div class="rectangle-parent5">
+        <img class="frame-child" alt="" src="./public/rectangle-114@2x.png" />
 
-        <div class="relative w-[258px] h-[53px]">
-          <div
-            class="absolute top-[25px] left-[0px] tracking-[-0.04em] font-medium"
-          >
-            <p class="m-0">
+        <div class="parent2">
+          <div class="div18">
+            <p class="p">
               법 관련된 문제를 해결하고, 고객을 변호하여 법적인 보호와
             </p>
-            <p class="m-0">조언을 제공하는 전문가입니다.</p>
+            <p class="p">조언을 제공하는 전문가입니다.</p>
           </div>
-          <b
-            class="absolute top-[0px] left-[0px] text-lg tracking-[-0.04em] text-black"
-            >변호사</b
-          >
+          <b class="b6">변호사</b>
         </div>
       </div>
-      <div class="absolute top-[38px] left-[1251px] w-12 h-12">
-        <div
-          class="absolute top-[0px] left-[0px] rounded-[5.65px] bg-white box-border w-12 h-12 border-[1px] border-solid border-lightsteelblue"
-        ></div>
-        <img
-          class="absolute top-[calc(50%_-_11px)] left-[calc(50%_-_15px)] w-[30.35px] h-[22.16px]"
-          alt=""
-          src="/public/vector.svg"
-        />
+      <div class="rectangle-parent6">
+        <div class="group-child6"></div>
+        <img class="vector-icon" alt="" src="./public/vector.svg" />
       </div>
-      <div
-        class="absolute top-[749px] left-[922px] rounded-2xs bg-white shadow-[0px_0px_8px_#b3c6d9] box-border w-[377px] flex flex-row py-3 px-4 items-center justify-start gap-[10px] text-lg text-black border-[1px] border-solid border-lightgray"
-      >
-        <img
-          class="relative rounded-4xs w-[58px] h-[58px] object-cover"
-          alt=""
-          src="/public/rectangle-115@2x.png"
-        />
+      <div class="rectangle-parent7">
+        <img class="frame-child" alt="" src="./public/rectangle-115@2x.png" />
 
-        <div class="relative w-[284px] h-[53px]">
-          <b class="absolute top-[0px] left-[0px] tracking-[-0.04em]"
-            >AI 엔지니어</b
-          >
-          <div
-            class="absolute top-[25px] left-[0px] text-xs tracking-[-0.05em] font-medium text-darkgray"
-          >
-            <p class="m-0">
+        <div class="ai-parent">
+          <b class="ai">AI 엔지니어</b>
+          <div class="div17">
+            <p class="p">
               인공지능 시스템의 설계, 개발 및 구현에 전문적으로 참여하는 역할
             </p>
-            <p class="m-0">
+            <p class="p">
               입니다. 머신러닝 및 딥러닝 알고리즘을 사용하여 데이터를 분석하
             </p>
           </div>
         </div>
       </div>
-      <div
-        class="absolute top-[112px] left-[1111px] [background:linear-gradient(270deg,_#fff,_rgba(255,_255,_255,_0))] w-[329px] h-[464px]"
-      ></div>
-      <img
-        class="absolute top-[308px] left-[30px] w-[62px] h-[62px]"
-        alt=""
-        src="/public/group-9.svg"
-      />
+      <div class="main-inner"></div>
+      <img class="group-icon" alt="" src="./public/group-9.svg" />
 
-      <img
-        class="absolute top-[308px] left-[1347px] w-[62px] h-[62px]"
-        alt=""
-        src="/public/group-10.svg"
-      />
+      <img class="main-child1" alt="" src="./public/group-10.svg" />
 
-      <div
-        class="absolute top-[450px] left-[163px] tracking-[-0.04em] text-gray inline-block w-[187px]"
-      >
+      <div class="ai1">
         AI 시스템으로 원하는 것을 정확하게 생산하도록 돕는 이들로, AI에 입력하는
         텍스트 프롬프트를 만들고 개선하는 전문가입니다.
       </div>
       <img
-        class="absolute top-[47px] left-[144px] w-6 h-6 overflow-hidden"
+        class="basilbinocular-solid-icon"
         alt=""
-        src="/public/basilbinocularsolid.svg"
+        src="./public/basilbinocularsolid.svg"
       />
     </div>
   </body>
