--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Pretendard:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Pretendard:wght@400;500;700;900&display=swap"
     />
   </head>
   <body>
@@ -30,7 +30,7 @@
       <b class="b1">공부하기</b>
       <div class="rectangle-parent">
         <div class="group-child"></div>
-        <img class="group-item" alt="" src="./public/rectangle-8@2x.png" />
+        <img class="group-item" alt="" src="./public/rectangle-86@2x.png" />
 
         <div class="div5">프롬프트 엔지니어</div>
       </div>
@@ -41,7 +41,7 @@
           실행하는 전문가입니다.
         </div>
         <div class="div7">브랜드 마케터</div>
-        <img class="group-item" alt="" src="./public/rectangle-81@2x.png" />
+        <img class="group-item" alt="" src="./public/rectangle-811@2x.png" />
       </div>
       <div class="rectangle-container">
         <div class="rectangle-div"></div>
@@ -50,7 +50,7 @@
           목수로, 고객의 요구와 디자인 컨셉에 맞는 인테리어를 제공합니다.
         </div>
         <div class="div7">인테리어 목수</div>
-        <img class="group-item" alt="" src="./public/rectangle-82@2x.png" />
+        <img class="group-item" alt="" src="./public/rectangle-821@2x.png" />
       </div>
       <div class="group-div">
         <div class="group-child2"></div>
@@ -59,7 +59,7 @@
           컴포넌트, 아트워크 등을 설계하여 즐거움과 상호작용을 제공합니다.
         </div>
         <div class="div11">보드게임 디자이너</div>
-        <img class="group-item" alt="" src="./public/rectangle-83@2x.png" />
+        <img class="group-item" alt="" src="./public/rectangle-831@2x.png" />
       </div>
       <div class="rectangle-parent1">
         <div class="group-child4"></div>
@@ -68,10 +68,10 @@
           개발하여 환경 문제의 중요성과 해결 방법을 알리고 인식을 개선합니다.
         </div>
         <div class="div13">환경교육 전문가</div>
-        <img class="group-item" alt="" src="./public/rectangle-84@2x.png" />
+        <img class="group-item" alt="" src="./public/rectangle-841@2x.png" />
       </div>
       <div class="frame-div">
-        <img class="frame-child" alt="" src="./public/rectangle-11@2x.png" />
+        <img class="frame-child" alt="" src="./public/rectangle-116@2x.png" />
 
         <div class="parent">
           <b class="ai">소방관</b>
@@ -82,7 +82,7 @@
         </div>
       </div>
       <div class="rectangle-parent2">
-        <img class="frame-child" alt="" src="./public/rectangle-111@2x.png" />
+        <img class="frame-child" alt="" src="./public/rectangle-1111@2x.png" />
 
         <div class="group">
           <b class="ai">회계사</b>
@@ -97,7 +97,7 @@
         </div>
       </div>
       <div class="rectangle-parent3">
-        <img class="frame-child" alt="" src="./public/rectangle-112@2x.png" />
+        <img class="frame-child" alt="" src="./public/rectangle-1121@2x.png" />
 
         <div class="container">
           <b class="ai">교사</b>
@@ -110,7 +110,7 @@
         </div>
       </div>
       <div class="rectangle-parent4">
-        <img class="frame-child" alt="" src="./public/rectangle-113@2x.png" />
+        <img class="frame-child" alt="" src="./public/rectangle-1131@2x.png" />
 
         <div class="ai-parent">
           <b class="ai">특허 변리사</b>
@@ -125,7 +125,7 @@
         </div>
       </div>
       <div class="rectangle-parent5">
-        <img class="frame-child" alt="" src="./public/rectangle-114@2x.png" />
+        <img class="frame-child" alt="" src="./public/rectangle-1141@2x.png" />
 
         <div class="parent2">
           <div class="div18">
@@ -142,7 +142,7 @@
         <img class="vector-icon" alt="" src="./public/vector.svg" />
       </div>
       <div class="rectangle-parent7">
-        <img class="frame-child" alt="" src="./public/rectangle-115@2x.png" />
+        <img class="frame-child" alt="" src="./public/rectangle-1151@2x.png" />
 
         <div class="ai-parent">
           <b class="ai">AI 엔지니어</b>
@@ -168,7 +168,7 @@
       <img
         class="basilbinocular-solid-icon"
         alt=""
-        src="./public/basilbinocularsolid.svg"
+        src="./public/basilbinocularsolid2.svg"
       />
     </div>
   </body>
